# streamlit-meta-state

./: README.md  pyproject.toml  setup.py
src/streamlit_meta_state/: __init__.py  core.py
tests/: test_core.py
